oxiplate-derive/tests/broken/statements/closed-like-writ.stderr
error: Expected `%}`, `-%}`, or `_%}`
 --> tests/broken/statements/closed-like-writ.rs:4:32
  |
4 | #[oxiplate_inline("{% continue }}")]
  |                                ^^
