oxiplate-derive/tests/broken/statements/closed-like-writ.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
#[oxiplate_inline("{% continue }}")]
struct Data {}

fn main() {
    print!("{}", Data {});
}
